4-23-25 pre-context-set-refactor

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@tsparticles/slim": "^3.3.0",
     "@types/gapi": "^0.0.47",
     "@types/gapi.client.gmail": "^1.0.5",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/prismjs": "^1.26.5",
     "@upstash/ratelimit": "^2.0.5",
     "@vercel/kv": "^3.0.0",
@@ -106,6 +107,7 @@
     "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.2.20",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.468.0",
     "mammoth": "^1.9.0",
     "micro-cors": "^0.1.1",
