--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev-wp": "next dev",
-    "dev": "next dev --turbopack",
-    "dev:debug:win": "set NODE_OPTIONS=--inspect && next dev",
+    "dev-wp": "set NODE_OPTIONS=--max-old-space-size=4096 && next dev",
+    "turbo": "set NODE_OPTIONS=--max-old-space-size=4096 && next dev --turbo",
+    "dev": "NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "dev:debug:win": "set NODE_OPTIONS=--inspect --max-old-space-size=6144 && next dev",
     "dev:debug:unix": "NODE_OPTIONS=--inspect next dev",
     "build": "next build",
     "start": "next start",
@@ -78,7 +79,7 @@
     "@types/prismjs": "^1.26.5",
     "@upstash/ratelimit": "^2.0.5",
     "@vercel/kv": "^3.0.0",
-    "ai": "^4.1.47",
+    "ai": "^4.3.15",
     "aws-sdk": "^2.1653.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -150,7 +151,7 @@
     "waveform-data": "^4.5.0",
     "ws": "^8.18.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.22.4",
+    "zod": "^3.24.4",
     "zod-to-json-schema": "^3.23.0",
     "zustand": "^4.5.2"
   },
